bat.bool1.diff21.Diff21.scala.error
Erreur de compilation :
Diff21:6: error: type mismatch;
 found   : Unit
 required: Int
  else { return
         ^